// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="jc-table-wrapper"
>
  <div
    class="jc-spin-nested-loading"
  >
    <div
      class="jc-spin-container"
    >
      <div
        class="jc-table jc-table-large jc-table-empty jc-table-scroll-position-left"
      >
        <div
          class="jc-table-content"
        >
          <div
            class="jc-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="jc-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="jc-table-tbody"
              />
            </table>
          </div>
          <div
            class="jc-table-placeholder"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="jc-table-wrapper"
>
  <div
    class="jc-spin-nested-loading"
  >
    <div
      class="jc-spin-container"
    >
      <div
        class="jc-table jc-table-large jc-table-empty jc-table-scroll-position-left"
      >
        <div
          class="jc-table-content"
        >
          <div
            class="jc-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="jc-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="jc-table-tbody"
              />
            </table>
          </div>
          <div
            class="jc-table-placeholder"
          >
            custom empty text 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="jc-table-wrapper"
>
  <div
    class="jc-spin-nested-loading"
  >
    <div
      class="jc-spin-container"
    >
      <div
        class="jc-table jc-table-large jc-table-empty jc-table-scroll-position-left"
      >
        <div
          class="jc-table-content"
        >
          <div
            class="jc-table-scroll"
          >
            <div
              class="jc-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width:100px;min-width:100px"
                  />
                </colgroup>
                <thead
                  class="jc-table-thead"
                >
                  <tr>
                    <th
                      class=""
                    >
                      <span>
                        Full Name
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Age
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Action
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="jc-table-tbody"
                />
              </table>
            </div>
            <div
              class="jc-table-placeholder"
            >
              No data
            </div>
          </div>
          <div
            class="jc-table-fixed-left"
          >
            <div
              class="jc-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="jc-table-body-inner"
              >
                <table
                  class="jc-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="jc-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <span>
                          Full Name
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Age
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="jc-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
          <div
            class="jc-table-fixed-right"
          >
            <div
              class="jc-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="jc-table-body-inner"
              >
                <table
                  class="jc-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="jc-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <span>
                          Action
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="jc-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="jc-table-wrapper"
>
  <div
    class="jc-spin-nested-loading"
  >
    <div>
      <div
        class="jc-spin jc-spin-spinning jc-table-without-pagination jc-table-spin-holder"
      >
        <span
          class="jc-spin-dot jc-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="jc-spin-container jc-spin-blur"
    >
      <div
        class="jc-table jc-table-large jc-table-empty jc-table-scroll-position-left"
      >
        <div
          class="jc-table-content"
        >
          <div
            class="jc-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="jc-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="jc-table-tbody"
              />
            </table>
          </div>
          <div
            class="jc-table-placeholder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
